--- a/aboutBank.html
+++ b/aboutBank.html
@@ -15,6 +15,20 @@
     <link rel="stylesheet" href="animation.css">
     <link id="path" rel="stylesheet" href="style-light.css">
     <title>Business Team Bank</title>
+        <style>
+        .header-box-2 {
+            background-image: url(./images/about-bank.png);
+            width: 100%;
+            height: 700px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            flex-direction: column;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -32,22 +46,22 @@
             <span></span>
         </div>
 
-            <nav id="nav-menu">
-                <ul>
-                    <li><a href="./index.html">Головна</a></li>
-                    <li><a href="./services.html">Послуги</a></li>
-                    <li><a href="./aboutBank.html">Про банк</a></li>
-                    <li><a href="./contacts">Контакти</a></li>
-                    <li><a href="./tarif.html">Тарифи</a></li>
-                    <li><a href="./convertor.html">Конвертор валют</a></li>
-                </ul>
-                <label class="switch">
-                    <img id="img1" src="https://img.icons8.com/?size=100&id=Wdnu-edbShJS&format=png&color=000000" />
-                    <input type="checkbox" id="themeToggle" onclick="changeCSS()" />
-                    <span class="slider"></span>
-                </label>
-                <script src="script.js"></script>
-            </nav>
+        <nav id="nav-menu">
+            <ul>
+                <li><a href="./index.html">Головна</a></li>
+                <li><a href="./services.html">Послуги</a></li>
+                <li><a href="./aboutBank.html">Про банк</a></li>
+                <li><a href="./contacts">Контакти</a></li>
+                <li><a href="./tarif.html">Тарифи</a></li>
+                <li><a href="./convertor.html">Конвертор валют</a></li>
+            </ul>
+            <label class="switch">
+                <img id="img1" src="https://img.icons8.com/?size=100&id=Wdnu-edbShJS&format=png&color=000000" />
+                <input type="checkbox" id="themeToggle" onclick="changeCSS()" />
+                <span class="slider"></span>
+            </label>
+            <script src="script.js"></script>
+        </nav>
         <script>
             const burger = document.getElementById('burger');
             const navMenu = document.getElementById('nav-menu');
@@ -56,6 +70,10 @@
                 navMenu.classList.toggle('active');
             });
         </script>
+    </div>
+    <div class="header-box-2">
+        <!-- <h2>Вигідні тарифи для кожного клієнта</h2> -->
+        <!-- <p>Оберіть найкращий пакет послуг відповідно до ваших потреб</p> -->
     </div>
     <div class="main-body">
         <section id="aboutBank">
