--- a/tarif.html
+++ b/tarif.html
@@ -69,17 +69,19 @@
         text-align: center;
     }
 
-    .header-box-5 {
+    .header-box-4 {
         background-image: url(./images/for-tarif.png);
         width: 100%;
-        height: 880px;
+        height: 700px;
+        background-repeat: no-repeat;
+        background-size: cover;
         flex-direction: column;
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
-    .header-box-5 h2 {
+    .header-box-4 h2 {
         width: auto;
         max-width: 700px;
         max-height: 140px;
@@ -88,7 +90,7 @@
         line-height: 60px;
     }
 
-    .header-box-5 p {
+    .header-box-4 p {
         width: auto;
         max-width: 330px;
         max-height: 140px;
@@ -144,7 +146,7 @@
         </script>
     </div>
 
-    <div class="header-box-5">
+    <div class="header-box-4">
         <h2>Вигідні тарифи для кожного клієнта</h2>
         <p>Оберіть найкращий пакет послуг відповідно до ваших потреб</p>
     </div>
@@ -186,7 +188,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
                 <!-- Indicators/dots -->
