--- a/services.html
+++ b/services.html
@@ -15,20 +15,6 @@
     <link rel="stylesheet" href="animation.css">
     <link id="path" rel="stylesheet" href="style-light.css">
     <title>Business Team Bank</title>
-    <style>
-        .header-box-1 {
-            background-image: url(./images/services.png);
-            width: 100%;
-            height: 700px;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            flex-direction: column;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    </style>
 </head>
 
 <body>
@@ -72,10 +58,8 @@
             });
         </script>
     </div>
-    <div class="header-box-1">
-        <!-- <h2>Вигідні тарифи для кожного клієнта</h2> -->
-        <!-- <p>Оберіть найкращий пакет послуг відповідно до ваших потреб</p> -->
-    </div>
+    <!-- <div class="header-box-1">
+    </div> -->
     <div class="main-body">
         <section id="services" style="scroll-margin-top: 90px;">
 
